<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:theme="@style/AppTheme.Dark"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginActivity"
    android:padding="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <!-- logo -->
        <ImageView
            android:layout_width="@dimen/logo_width_on_login_activity"
            android:layout_height="@dimen/logo_width_on_login_activity"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_orca_logo" />

        <!-- login -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_frag_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:maxLines="1"
                android:inputType="textAutoComplete"/>

        </android.support.design.widget.TextInputLayout>

        <!-- password -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_frag_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_frag_sign_in_btn"
            android:text="@string/sign_in"/>
    </LinearLayout>


</ScrollView>