...
    <string name="holiday_period">Holidays</string>
    <string name="first_week_of_month">1\'st week</string>
    <string name="second_week_of_month">2\'nd week</string>
    <string name="third_week_of_month">3\'rd week</string>
    <string name="fourth_week_of_month">4\'th week</string>

    <string name="network_error_occurred">Network error occurred. Check your connection</string>

    <!-- Strings related to log in activity -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="login_cannot_be_empty_string">Login cannot be empty string</string>
    <string name="password_cannot_be_empty_string">Password cannot be empty string</string>
    <string name="signing_in">Signing in</string>
    <string name="login_or_password_incorrect">Login or password incorrect</string>

    <!-- Strings related to learning activity -->
    <string name="reenter_login_and_password">Re-enter</string>
    <string name="no_user_signed_in">No user signed in</string>
    <string name="points_not_entered_value">-</string>

...
